<resources>
    <string name="app_name">Sổ tay giao thông</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="gioithieu1">Ứng dụng sổ tay giao thông</string>
    <string name="gioithieu2">Ôn tập các câu hỏi sát hạch lái xe</string>
    <string name="gioithieu3">- Câu hỏi được phân loại \n- Dễ dàng ôn tập \n- Giải thích đầy đủ</string>
    <string name="gioithieu4">Tra cứu mọi thông tin</string>
    <string name="gioithieu5">Hệ thống biển báo</string>
    <string name="gioithieu6">Văn bản pháp luật</string>
    <string name="gioithieu7">- Thông tin đầy đủ và chính xác \n- Tra cứu mọi lúc, mọi nơi</string>
    <string name="gioithieu10">Tiện ích của bạn</string>
    <string name="truoc">Trước</string>
    <string name="sau">Sau</string>
    <string name="name_1">Trần Gia Bảo</string>
    <string name="name_2">Android Developer</string>
    <string name="gmail_1">Gmail</string>
    <string name="gmail_2">trangiabao1203@gmail.com</string>
    <string name="phone_1">Phone Number</string>
    <string name="phone_2">+84 120 683 6908</string>
    <string name="facebook_1">Facebook</string>
    <string name="facebook_2">fb.com/baotran1203</string>
    <string name="skype_1">Skype</string>
    <string name="skype_2">baotran1203</string>
    <string name="source_1">Nguồn tham khảo</string>
    <string name="source_2">Copyright © 2016 </string>

    <string name="hang_bang">Hạng bằng</string>
    <string name="nhom_cau_hoi">Nhóm câu hỏi</string>
    <string name="sap_xep">Sắp xếp</string>
    <string name="bat_dau">Bắt đầu ôn thi</string>
    <string name="ngau_nhien">Ngẫu nhiên</string>
    <string name="theo_thu_tu">Theo thứ tự</string>
    <string name="tat_ca">Tất cả</string>
    <string name="lam_bai">Chuyển đến trang làm bài</string>
    <string name="ket_thuc">Kết thúc</string>
    <string name="bai_thi">Bài thi</string>
    <string name="dap_an">Đáp án</string>
    <string name="dac_diem">Đặc điểm</string>
    <string name="gui">Gửi</string>
    <string name="internet">*Bạn phải kết nối Internet</string>
    <string name="noi_dung">Nội dung</string>
    <string name="email">Email</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="feedback">Mọi ý kiến đóng góp, phản hồi, báo lỗi. Xin gửi thông tin cho nhà phát triển</string>

    <!-- AdMob ad unit IDs -->
    <string name="test_device_id">9C22A30BC18128F577CA9F35BC508E43</string>
    <string name="a_baithi">ca-app-pub-5798426578498335/5204923208</string>
    <string name="a_bienbao">ca-app-pub-5798426578498335/6542055608</string>
    <string name="a_biensoxe">ca-app-pub-5798426578498335/9495522009</string>
    <string name="a_cauhoi">ca-app-pub-5798426578498335/2251456806</string>
    <string name="a_chuong">ca-app-pub-5798426578498335/2111856003</string>
    <string name="a_hotline">ca-app-pub-5798426578498335/1972255202</string>
    <string name="a_meoghinho">ca-app-pub-5798426578498335/8158389601</string>
    <string name="a_noidung">ca-app-pub-5798426578498335/3588589200</string>
    <string name="a_tuychonbaithi">ca-app-pub-5798426578498335/3728190009</string>
    <string name="a_tuychoncauhoi">ca-app-pub-5798426578498335/9774723601</string>
    <string name="a_vanban">ca-app-pub-5798426578498335/9635122806</string>
    <string name="a_xuphat">ca-app-pub-5798426578498335/8018788803</string>
    <string name="f_chiase">ca-app-pub-5798426578498335/2391057605</string>
    <string name="f_feedback">ca-app-pub-5798426578498335/8297990401</string>
    <string name="f_gioithieu">ca-app-pub-5798426578498335/4007391609</string>
    <string name="f_lienhe">ca-app-pub-5798426578498335/5344524006</string>
    <string name="f_sathach">ca-app-pub-5798426578498335/5484124809</string>
    <string name="f_tracuu">ca-app-pub-5798426578498335/6960858003</string>
    <string name="chia_se">Chia sẽ ứng dụng với bạn bè</string>
</resources>
