<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:discrollve="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gioithieu.GioiThieuFragment">

    <com.flavienlaurent.discrollview.lib.DiscrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flavienlaurent.discrollview.lib.DiscrollViewContent
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:background="#FFF"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_muc_luc"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/gioithieu1"
                    android:textColor="@android:color/black"
                    android:textSize="50sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_muc_luc" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                discrollve:discrollve_fromBgColor="#C71585"
                discrollve:discrollve_toBgColor="#9acd32" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/gioithieu2"
                android:textSize="20sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/ic_muc_luc"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromLeft" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="right"
                android:src="@drawable/ic_muc_luc"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromRight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fontFamily="serif"
                android:gravity="left|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/gioithieu3"
                android:textSize="25sp"
                discrollve:discrollve_scaleX="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                discrollve:discrollve_fromBgColor="#0000ff"
                discrollve:discrollve_toBgColor="#ffa500" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/gioithieu4"
                android:textSize="20sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromTop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2"
                discrollve:discrollve_translation="fromRight|fromTop">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_muc_luc" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_muc_luc" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_muc_luc" />

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/gioithieu5"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2"
                discrollve:discrollve_translation="fromLeft|fromBottom">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:text="@string/gioithieu6"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_muc_luc" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_muc_luc" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fontFamily="serif"
                android:gravity="left|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/gioithieu7"
                android:textSize="25sp"
                discrollve:discrollve_scaleX="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                discrollve:discrollve_fromBgColor="#ffff00"
                discrollve:discrollve_toBgColor="#ee82ee" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/gioithieu8"
                android:textSize="30sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromRight|fromBottom" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/ic_muc_luc"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_scaleX="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fontFamily="serif"
                android:gravity="left|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/gioithieu9"
                android:textSize="25sp"
                discrollve:discrollve_alpha="true" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/ic_muc_luc"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_scaleY="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_fromBgColor="#008000"
                discrollve:discrollve_toBgColor="#ff0000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:text="@string/gioithieu10"
                android:textSize="25sp"
                discrollve:discrollve_alpha="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ilovecheese_heart"
                discrollve:discrollve_translation="fromBottom" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </com.flavienlaurent.discrollview.lib.DiscrollViewContent>
    </com.flavienlaurent.discrollview.lib.DiscrollView>
</FrameLayout>
